[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wsi-ml"
version = "0.0.1"
authors = [
  { name="Wong Wai Ki", email="wkwongau@gmail.com" },
]
description = "Machine Learning tools for Whole Slide Image(WSI)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Deepskyhunter/wsi-ml"
"Bug Tracker" = "https://github.com/Deepskyhunter/wsi-ml/issues"